Deliberation chain update
